# fastapi-template-monolith

./: .dockerignore  .env.example  .env.test.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: ISSUE_TEMPLATE.md  pull_request_template.md
.github/workflows/: ci.yml  docker-build.yml  security-scan.yml
alembic/: env.py
alembic/versions/: 001_init.py
app/: main.py
app/config/: settings.py
app/modules/tasks/: __init__.py  models.py  router.py  schemas.py  service.py
app/shared/database/: __init__.py  engine.py
app/shared/exceptions/: __init__.py  handlers.py
app/shared/health/: __init__.py  router.py
app/shared/logging/: __init__.py  config.py
app/shared/metrics/: __init__.py  middleware.py  router.py
app/shared/middleware/: __init__.py  logging_mw.py  request_id.py  security_headers.py
app/shared/redis/: __init__.py  client.py
docker/: Dockerfile  Dockerfile.dev  init-test-db.sql
tests/: conftest.py  test_app.py  test_health.py
tests/modules/tasks/: test_tasks.py
