[project]
name = "fastapi-template-monolith"
version = "0.0.0"
description = "FastAPI monolith template with PostgreSQL, Redis, observability, and production-grade tooling"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "teo-garcia" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "gunicorn>=23.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic-settings>=2.7",
    "redis>=5.2",
    "structlog>=24.4",
    "prometheus-client>=0.21",
    "slowapi>=0.1.9",
    "httpx>=0.28",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "mypy>=1.14",
    "ruff>=0.8",
    "pre-commit>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# -- Ruff (lint + format) --

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "S",   # flake8-bandit (security)
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "T20", # flake8-print
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "B008", # Depends() in default args is the standard FastAPI DI pattern
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
"alembic/**" = ["UP", "I"]

[tool.ruff.format]
quote-style = "double"

# -- mypy --

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/"]

[[tool.mypy.overrides]]
module = ["redis.*", "slowapi.*", "prometheus_client.*"]
ignore_missing_imports = true

# -- pytest --

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["e2e: end-to-end tests requiring database and redis"]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "alembic/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80
